--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.13"
 ffmpeg-python = "^0.2.0"
+requests = "^2.32.3"
+tqdm = "^4.66.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
