--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.13"
 ffmpeg-python = "^0.2.0"
 requests = "^2.32.3"
 tqdm = "^4.66.5"
+typer = "^0.12.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
